--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
   <meta name="theme-color" content="#ff8000">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" integrity="sha256-vK3UTo/8wHbaUn+dTQD0X6dzidqc5l7gczvH+Bnowwk=" crossorigin="anonymous" />
-  <!-- @TODO:
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css" media="all">
-  -->
+  <script src="https://kit.fontawesome.com/08787e9622.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" media="all">
+
 </head>
 
 <body>
