Fix broken image URL in home page.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   <div class="hero-body">
     <div class="container">
       <div class='is-pulled-left hero-img images'>
-          <img src="/assets/images/hacktober.svg">
+          <img src="{{ site.baseurl }}/assets/images/hacktober.svg">
       </div>
       <div class='is-pulled-right organisation-title'>
       <h1 class="title">
